// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculateNextState can calculate next state 1`] = `
{
  "ball": {
    "missed": undefined,
    "movement": {
      "angle": 44.99999999999999,
      "mag": 14.142135623730953,
      "position": {
        "x": 10.000000000000002,
        "y": 10,
      },
      "set": [Function],
      "setAngle": [Function],
      "x": 10.000000000000002,
      "y": 10,
    },
    "position": {
      "angle": 34.11447294534126,
      "mag": 374.4329045369811,
      "position": {
        "x": 310,
        "y": 210,
      },
      "set": [Function],
      "setAngle": [Function],
      "x": 310,
      "y": 210,
    },
  },
  "bars": {
    "1": {
      "command": "up",
      "position": {
        "x": 20,
        "y": 90,
      },
    },
    "2": {
      "command": "up",
      "position": {
        "x": 580,
        "y": 90,
      },
    },
  },
  "calcFrames": 0,
  "playerNumber": 1,
  "receiving": false,
  "score": {
    "1": 0,
    "2": 0,
  },
}
`;

exports[`calculateNextState can recursively calculate current state from old network snapshot 1`] = `
{
  "ball": {
    "missed": undefined,
    "movement": {
      "angle": 44.99999999999999,
      "mag": 14.142135623730953,
      "position": {
        "x": 10.000000000000004,
        "y": 10,
      },
      "set": [Function],
      "setAngle": [Function],
      "x": 10.000000000000004,
      "y": 10,
    },
    "position": {
      "angle": 34.5085229876684,
      "mag": 388.329756778952,
      "position": {
        "x": 320,
        "y": 220,
      },
      "set": [Function],
      "setAngle": [Function],
      "x": 320,
      "y": 220,
    },
  },
  "bars": {
    "1": {
      "command": "up",
      "position": {
        "x": 20,
        "y": 90,
      },
    },
    "2": {
      "command": "up",
      "position": {
        "x": 580,
        "y": 80,
      },
    },
  },
  "calcFrames": 0,
  "playerNumber": 1,
  "receiving": false,
  "score": {
    "1": 0,
    "2": 0,
  },
}
`;
